[feat] config 서버 구현 (#37)